[package]
name = "carbonbond"
version = "0.1.0"
authors = ["金剛 <yc1043@gmail.com>", "石墨 <why8ther@gmail.com>"]
edition = "2018"
default-run = "server"

[dependencies]
async-trait = "0.1.31"
chitin = { git = "https://github.com/carbon-bond/chitin" }
chrono = { version = "0.4.7", features = ["serde"] }
clap = {version = "2.33.0", features = ["yaml"]}
cookie = { version = "0.14.1", features= ["secure", "percent-encode"] }
derive_more = "0.15.0"
env_logger = "0.6.2"
hyper = "0.13.6"
hyper-staticfile = "0.5.3"
log = "0.4.8"
refinery = { version = "0.3", features = ["postgres"] }
regex = "1.2.1"
rustyline = "6.2.0"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono" ] }
state = { version = "0.4.1", features = ["const_fn", "tls"] }
structopt = "0.3"
tempfile = "3"
time = "0.2.16"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.1"
typescript-definitions = { git = "https://github.com/carbon-bond/typescript-definitions" }

[build-dependencies]
chitin = { git = "https://github.com/carbon-bond/chitin" }
chrono = { version = "0.4.7", features = ["serde"] }
derive_more = "0.15.0"
serde = { version = "1.0.98", features = ["derive"] }
toml = "0.5.1"
typescript-definitions = { git = "https://github.com/carbon-bond/typescript-definitions" }

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "dbtool"
path = "src/db_tool.rs"

[lib]
doctest = false