[package]
name = "carbonbond"
version = "0.1.0"
authors = ["金剛 <yc1043@gmail.com>", "石墨 <why8ther@gmail.com>"]
edition = "2018"
default-run = "server"

[dependencies]
http = "0.2.5"
tokio-stream = "0.1"
async-trait = "0.1.38"
chitin = { git = "https://github.com/carbon-bond/chitin", rev = "0f4cfe6" }
chrono = { version = "0.4.15", features = ["serde"] }
clap = { version = "2.33.3", features = ["yaml"] }
cookie = { version = "0.14.2", features = ["secure", "percent-encode"] }
derive_more = "0.99.9"
env_logger = "0.7.1"
hyper = { version = "0.14.4", optional = true }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.11"
rustyline = "6.2.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono", "migrate", "any", "offline" ] }
state = { version = "0.4.1", features = ["const_fn", "tls"] }
structopt = "0.3.17"
tempfile = "3.1.0"
time = "0.2.16"
tokio = { version = "1", features = ["full"] }
toml = "0.5.6"
typescript-definitions = { git = "https://github.com/carbon-bond/typescript-definitions" }
rand = "0.7.3"
rust-argon2 = { version = "0.8.2", optional = true }
redis = { version = "0.20.0", optional = true, features = ["tokio-comp"] }
force = { path = "../force/rust" }
lazy_static = "1.4.0"
strum = { version = "0.19", features = ["derive"] }
base64 = "0.13.0"
percent-encoding = "2.1.0"
warp = "0.3.0"
futures = "0.3.13"

[dependencies.openssl]
version = "0.10.29"
features = [ "vendored" ]

[build-dependencies]
env_logger = "0.7.1"
toml = "0.5.6"
chitin = { git = "https://github.com/carbon-bond/chitin", rev = "0f4cfe6" }
log = "0.4.11"
derive_more = "0.99.9"
chrono = { version = "0.4.15", features = ["serde"] }
serde = { version = "1.0.115", features = ["derive"] }
typescript-definitions = { git = "https://github.com/carbon-bond/typescript-definitions" }
force = { path = "../force/rust" }
strum = { version = "0.19", features = ["derive"] }

[[bin]]
name = "server"
path = "src/bin/main.rs"

[[bin]]
name = "dbtool"
path = "src/bin/db_tool.rs"

[[bin]]
name = "prepare"
path = "src/bin/prepare.rs"
required-features = ["prepare"]

[lib]
doctest = false

[features]
default = ["hyper", "rust-argon2", "redis"]
prepare = []

[profile.release]
lto = true
