[package]
name = "force"
version = "0.1.0"
authors = ["MROS <yc1043@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
async-trait = "0.1.38"
regex = "1.3.7"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
log = "0.4.11"
typescript-definitions = { git = "https://github.com/carbon-bond/typescript-definitions" }

[dev-dependencies]
tokio = { version = "0.2.22", features = ["full"] }